Standardize JMH benchmark setup